--- a/analysis/matching_tissue.Rmd
+++ b/analysis/matching_tissue.Rmd
@@ -115,6 +115,7 @@ combine_vectors <- function(vec1, vec_cor1, vec2, vec_cor2, pad_with_na = TRUE) 
   }
 }
 
+
 ```
 
 
@@ -123,9 +124,14 @@ combine_vectors <- function(vec1, vec_cor1, vec2, vec_cor2, pad_with_na = TRUE) 
 ```{r }
 
 sum_cat <- sum_all[sum_all$traits =="aFib-ebi-a-GCST006414",]
-DT::datatable(sum_cat,options = list(pageLength = 5))
 
-print("filtering based on the number of high PIP genes")
+DT::datatable(sum_cat,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','summary for ctwas parameters and high pip genes (all tissues analysised)'),options = list(pageLength = 5) )
+```
+
+## Filtering based on the number of high PIP genes
+
+```{r }
+
 sum_cat <- sum_cat[order(as.numeric(sum_cat$num_gene_susiepip08),decreasing = T),]
 
 tissue_select <- sum_cat$weights[num_top:1]
@@ -135,39 +141,12 @@ tissue_select <- tissue_select[tissue_select%in%rownames(lat)]
 cor <- lat[tissue_select,tissue_select]
 cor <- fill_upper_triangle(cor)
 print(levelplot(cor,col.regions = clrs,xlab = "",ylab = "",
-                colorkey = TRUE))
+                colorkey = TRUE,main = "heatmap showing the tissue-tissue correlation"))
 
 ##cor matrix
 cor <- cor[rev(tissue_select),rev(tissue_select)]
-DT::datatable(cor,options = list(pageLength = 10))
+DT::datatable(cor,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','tissue-tissue correlation matrix '),options = list(pageLength = 10) )
 
-tissue_select_f1 <- sum_cat$weights[1:num_top]
-filtered_tissues <- filter_tissues(tissue_select_f1, cor)
-
-tissue_select_f1_cor <- sum_cat$num_gene_susiepip08[sum_cat$weights %in% tissue_select_f1 ]
-filtered_tissues_cor <- sum_cat$num_gene_susiepip08[sum_cat$weights %in% filtered_tissues ]
-comb <- combine_vectors(tissue_select_f1, tissue_select_f1_cor, filtered_tissues, filtered_tissues_cor, pad_with_na = TRUE)
-colnames(comb) <- c("without_filtering","#ofgene","filtered","#ofgene")
-DT::datatable(comb,options = list(pageLength = 10))
-
-
-
-print("filtering based on PVE explained by genes")
-sum_cat <- sum_cat[order(as.numeric(sum_cat$group_pve_gene),decreasing = T),]
-
-
-tissue_select <- sum_cat$weights[num_top:1]
-tissue_select <- tissue_select[tissue_select%in%rownames(lat)]
-
-##heatmap
-cor <- lat[tissue_select,tissue_select]
-cor <- fill_upper_triangle(cor)
-print(levelplot(cor,col.regions = clrs,xlab = "",ylab = "",
-                colorkey = TRUE))
-
-##cor matrix
-cor <- cor[rev(tissue_select),rev(tissue_select)]
-DT::datatable(cor,options = list(pageLength = 10))
 
 tissue_select_f1 <- sum_cat$weights[1:num_top]
 filtered_tissues <- filter_tissues(tissue_select_f1, cor)
@@ -177,7 +156,40 @@ filtered_tissues_cor <- sum_cat$group_pve_gene[sum_cat$weights %in% filtered_tis
 comb <- combine_vectors(tissue_select_f1, tissue_select_f1_cor, filtered_tissues, filtered_tissues_cor, pad_with_na = TRUE)
 colnames(comb) <- c("without_filtering","PVE_gene","filtered","PVE_gene")
 
-DT::datatable(comb,options = list(pageLength = 10))
+
+DT::datatable(comb,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Comparing the top tissue lists (with/without filtering by tissue correlation) '),options = list(pageLength = 10) )
+
+```
+
+## Filtering based on PVE explained by genes 
+
+```{r}
+sum_cat <- sum_cat[order(as.numeric(sum_cat$group_pve_gene),decreasing = T),]
+
+tissue_select <- sum_cat$weights[num_top:1]
+tissue_select <- tissue_select[tissue_select%in%rownames(lat)]
+
+##heatmap
+cor <- lat[tissue_select,tissue_select]
+cor <- fill_upper_triangle(cor)
+print(levelplot(cor,col.regions = clrs,xlab = "",ylab = "",
+                colorkey = TRUE,main = "heatmap showing the tissue-tissue correlation"))
+
+##cor matrix
+cor <- cor[rev(tissue_select),rev(tissue_select)]
+DT::datatable(cor,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','tissue-tissue correlation matrix '),options = list(pageLength = 10) )
+
+
+tissue_select_f1 <- sum_cat$weights[1:num_top]
+filtered_tissues <- filter_tissues(tissue_select_f1, cor)
+
+tissue_select_f1_cor <- sum_cat$group_pve_gene[sum_cat$weights %in% tissue_select_f1 ]
+filtered_tissues_cor <- sum_cat$group_pve_gene[sum_cat$weights %in% filtered_tissues ]
+comb <- combine_vectors(tissue_select_f1, tissue_select_f1_cor, filtered_tissues, filtered_tissues_cor, pad_with_na = TRUE)
+colnames(comb) <- c("without_filtering","PVE_gene","filtered","PVE_gene")
+
+
+DT::datatable(comb,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Comparing the top tissue lists (with/without filtering by tissue correlation) '),options = list(pageLength = 10) )
 ```
 
 
@@ -186,12 +198,19 @@ DT::datatable(comb,options = list(pageLength = 10))
 # IBD
 
 
+
+
 ```{r }
 
 sum_cat <- sum_all[sum_all$traits =="IBD-ebi-a-GCST004131",]
-DT::datatable(sum_cat,options = list(pageLength = 5))
 
-print("filtering based on the number of high PIP genes")
+DT::datatable(sum_cat,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','summary for ctwas parameters and high pip genes (all tissues analysised)'),options = list(pageLength = 5) )
+```
+
+## Filtering based on the number of high PIP genes
+
+```{r }
+
 sum_cat <- sum_cat[order(as.numeric(sum_cat$num_gene_susiepip08),decreasing = T),]
 
 tissue_select <- sum_cat$weights[num_top:1]
@@ -201,39 +220,12 @@ tissue_select <- tissue_select[tissue_select%in%rownames(lat)]
 cor <- lat[tissue_select,tissue_select]
 cor <- fill_upper_triangle(cor)
 print(levelplot(cor,col.regions = clrs,xlab = "",ylab = "",
-                colorkey = TRUE))
+                colorkey = TRUE,main = "heatmap showing the tissue-tissue correlation"))
 
 ##cor matrix
 cor <- cor[rev(tissue_select),rev(tissue_select)]
-DT::datatable(cor,options = list(pageLength = 10))
+DT::datatable(cor,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','tissue-tissue correlation matrix '),options = list(pageLength = 10) )
 
-tissue_select_f1 <- sum_cat$weights[1:num_top]
-filtered_tissues <- filter_tissues(tissue_select_f1, cor)
-
-tissue_select_f1_cor <- sum_cat$num_gene_susiepip08[sum_cat$weights %in% tissue_select_f1 ]
-filtered_tissues_cor <- sum_cat$num_gene_susiepip08[sum_cat$weights %in% filtered_tissues ]
-comb <- combine_vectors(tissue_select_f1, tissue_select_f1_cor, filtered_tissues, filtered_tissues_cor, pad_with_na = TRUE)
-colnames(comb) <- c("without_filtering","#ofgene","filtered","#ofgene")
-DT::datatable(comb,options = list(pageLength = 10))
-
-
-
-print("filtering based on PVE explained by genes")
-sum_cat <- sum_cat[order(as.numeric(sum_cat$group_pve_gene),decreasing = T),]
-
-
-tissue_select <- sum_cat$weights[num_top:1]
-tissue_select <- tissue_select[tissue_select%in%rownames(lat)]
-
-##heatmap
-cor <- lat[tissue_select,tissue_select]
-cor <- fill_upper_triangle(cor)
-print(levelplot(cor,col.regions = clrs,xlab = "",ylab = "",
-                colorkey = TRUE))
-
-##cor matrix
-cor <- cor[rev(tissue_select),rev(tissue_select)]
-DT::datatable(cor,options = list(pageLength = 10))
 
 tissue_select_f1 <- sum_cat$weights[1:num_top]
 filtered_tissues <- filter_tissues(tissue_select_f1, cor)
@@ -243,16 +235,59 @@ filtered_tissues_cor <- sum_cat$group_pve_gene[sum_cat$weights %in% filtered_tis
 comb <- combine_vectors(tissue_select_f1, tissue_select_f1_cor, filtered_tissues, filtered_tissues_cor, pad_with_na = TRUE)
 colnames(comb) <- c("without_filtering","PVE_gene","filtered","PVE_gene")
 
-DT::datatable(comb,options = list(pageLength = 10))
+
+DT::datatable(comb,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Comparing the top tissue lists (with/without filtering by tissue correlation) '),options = list(pageLength = 10) )
+
 ```
+
+## Filtering based on PVE explained by genes 
+
+```{r}
+sum_cat <- sum_cat[order(as.numeric(sum_cat$group_pve_gene),decreasing = T),]
+
+tissue_select <- sum_cat$weights[num_top:1]
+tissue_select <- tissue_select[tissue_select%in%rownames(lat)]
+
+##heatmap
+cor <- lat[tissue_select,tissue_select]
+cor <- fill_upper_triangle(cor)
+print(levelplot(cor,col.regions = clrs,xlab = "",ylab = "",
+                colorkey = TRUE,main = "heatmap showing the tissue-tissue correlation"))
+
+##cor matrix
+cor <- cor[rev(tissue_select),rev(tissue_select)]
+DT::datatable(cor,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','tissue-tissue correlation matrix '),options = list(pageLength = 10) )
+
+
+tissue_select_f1 <- sum_cat$weights[1:num_top]
+filtered_tissues <- filter_tissues(tissue_select_f1, cor)
+
+tissue_select_f1_cor <- sum_cat$group_pve_gene[sum_cat$weights %in% tissue_select_f1 ]
+filtered_tissues_cor <- sum_cat$group_pve_gene[sum_cat$weights %in% filtered_tissues ]
+comb <- combine_vectors(tissue_select_f1, tissue_select_f1_cor, filtered_tissues, filtered_tissues_cor, pad_with_na = TRUE)
+colnames(comb) <- c("without_filtering","PVE_gene","filtered","PVE_gene")
+
+
+DT::datatable(comb,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Comparing the top tissue lists (with/without filtering by tissue correlation) '),options = list(pageLength = 10) )
+```
+
+
+
+
+
 # LDL
 
 ```{r }
 
 sum_cat <- sum_all[sum_all$traits =="LDL-ukb-d-30780_irnt",]
-DT::datatable(sum_cat,options = list(pageLength = 5))
 
-print("filtering based on the number of high PIP genes")
+DT::datatable(sum_cat,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','summary for ctwas parameters and high pip genes (all tissues analysised)'),options = list(pageLength = 5) )
+```
+
+## Filtering based on the number of high PIP genes
+
+```{r }
+
 sum_cat <- sum_cat[order(as.numeric(sum_cat$num_gene_susiepip08),decreasing = T),]
 
 tissue_select <- sum_cat$weights[num_top:1]
@@ -262,39 +297,12 @@ tissue_select <- tissue_select[tissue_select%in%rownames(lat)]
 cor <- lat[tissue_select,tissue_select]
 cor <- fill_upper_triangle(cor)
 print(levelplot(cor,col.regions = clrs,xlab = "",ylab = "",
-                colorkey = TRUE))
+                colorkey = TRUE,main = "heatmap showing the tissue-tissue correlation"))
 
 ##cor matrix
 cor <- cor[rev(tissue_select),rev(tissue_select)]
-DT::datatable(cor,options = list(pageLength = 10))
+DT::datatable(cor,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','tissue-tissue correlation matrix '),options = list(pageLength = 10) )
 
-tissue_select_f1 <- sum_cat$weights[1:num_top]
-filtered_tissues <- filter_tissues(tissue_select_f1, cor)
-
-tissue_select_f1_cor <- sum_cat$num_gene_susiepip08[sum_cat$weights %in% tissue_select_f1 ]
-filtered_tissues_cor <- sum_cat$num_gene_susiepip08[sum_cat$weights %in% filtered_tissues ]
-comb <- combine_vectors(tissue_select_f1, tissue_select_f1_cor, filtered_tissues, filtered_tissues_cor, pad_with_na = TRUE)
-colnames(comb) <- c("without_filtering","#ofgene","filtered","#ofgene")
-DT::datatable(comb,options = list(pageLength = 10))
-
-
-
-print("filtering based on PVE explained by genes")
-sum_cat <- sum_cat[order(as.numeric(sum_cat$group_pve_gene),decreasing = T),]
-
-
-tissue_select <- sum_cat$weights[num_top:1]
-tissue_select <- tissue_select[tissue_select%in%rownames(lat)]
-
-##heatmap
-cor <- lat[tissue_select,tissue_select]
-cor <- fill_upper_triangle(cor)
-print(levelplot(cor,col.regions = clrs,xlab = "",ylab = "",
-                colorkey = TRUE))
-
-##cor matrix
-cor <- cor[rev(tissue_select),rev(tissue_select)]
-DT::datatable(cor,options = list(pageLength = 10))
 
 tissue_select_f1 <- sum_cat$weights[1:num_top]
 filtered_tissues <- filter_tissues(tissue_select_f1, cor)
@@ -304,8 +312,45 @@ filtered_tissues_cor <- sum_cat$group_pve_gene[sum_cat$weights %in% filtered_tis
 comb <- combine_vectors(tissue_select_f1, tissue_select_f1_cor, filtered_tissues, filtered_tissues_cor, pad_with_na = TRUE)
 colnames(comb) <- c("without_filtering","PVE_gene","filtered","PVE_gene")
 
-DT::datatable(comb,options = list(pageLength = 10))
+
+DT::datatable(comb,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Comparing the top tissue lists (with/without filtering by tissue correlation) '),options = list(pageLength = 10) )
+
 ```
+
+## Filtering based on PVE explained by genes 
+
+```{r}
+sum_cat <- sum_cat[order(as.numeric(sum_cat$group_pve_gene),decreasing = T),]
+
+tissue_select <- sum_cat$weights[num_top:1]
+tissue_select <- tissue_select[tissue_select%in%rownames(lat)]
+
+##heatmap
+cor <- lat[tissue_select,tissue_select]
+cor <- fill_upper_triangle(cor)
+print(levelplot(cor,col.regions = clrs,xlab = "",ylab = "",
+                colorkey = TRUE,main = "heatmap showing the tissue-tissue correlation"))
+
+##cor matrix
+cor <- cor[rev(tissue_select),rev(tissue_select)]
+DT::datatable(cor,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','tissue-tissue correlation matrix '),options = list(pageLength = 10) )
+
+
+tissue_select_f1 <- sum_cat$weights[1:num_top]
+filtered_tissues <- filter_tissues(tissue_select_f1, cor)
+
+tissue_select_f1_cor <- sum_cat$group_pve_gene[sum_cat$weights %in% tissue_select_f1 ]
+filtered_tissues_cor <- sum_cat$group_pve_gene[sum_cat$weights %in% filtered_tissues ]
+comb <- combine_vectors(tissue_select_f1, tissue_select_f1_cor, filtered_tissues, filtered_tissues_cor, pad_with_na = TRUE)
+colnames(comb) <- c("without_filtering","PVE_gene","filtered","PVE_gene")
+
+
+DT::datatable(comb,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Comparing the top tissue lists (with/without filtering by tissue correlation) '),options = list(pageLength = 10) )
+```
+
+
+
+
 
 
 # SBP
@@ -313,9 +358,14 @@ DT::datatable(comb,options = list(pageLength = 10))
 ```{r }
 
 sum_cat <- sum_all[sum_all$traits =="SBP-ukb-a-360",]
-DT::datatable(sum_cat,options = list(pageLength = 5))
 
-print("filtering based on the number of high PIP genes")
+DT::datatable(sum_cat,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','summary for ctwas parameters and high pip genes (all tissues analysised)'),options = list(pageLength = 5) )
+```
+
+## Filtering based on the number of high PIP genes
+
+```{r }
+
 sum_cat <- sum_cat[order(as.numeric(sum_cat$num_gene_susiepip08),decreasing = T),]
 
 tissue_select <- sum_cat$weights[num_top:1]
@@ -325,39 +375,12 @@ tissue_select <- tissue_select[tissue_select%in%rownames(lat)]
 cor <- lat[tissue_select,tissue_select]
 cor <- fill_upper_triangle(cor)
 print(levelplot(cor,col.regions = clrs,xlab = "",ylab = "",
-                colorkey = TRUE))
+                colorkey = TRUE,main = "heatmap showing the tissue-tissue correlation"))
 
 ##cor matrix
 cor <- cor[rev(tissue_select),rev(tissue_select)]
-DT::datatable(cor,options = list(pageLength = 10))
+DT::datatable(cor,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','tissue-tissue correlation matrix '),options = list(pageLength = 10) )
 
-tissue_select_f1 <- sum_cat$weights[1:num_top]
-filtered_tissues <- filter_tissues(tissue_select_f1, cor)
-
-tissue_select_f1_cor <- sum_cat$num_gene_susiepip08[sum_cat$weights %in% tissue_select_f1 ]
-filtered_tissues_cor <- sum_cat$num_gene_susiepip08[sum_cat$weights %in% filtered_tissues ]
-comb <- combine_vectors(tissue_select_f1, tissue_select_f1_cor, filtered_tissues, filtered_tissues_cor, pad_with_na = TRUE)
-colnames(comb) <- c("without_filtering","#ofgene","filtered","#ofgene")
-DT::datatable(comb,options = list(pageLength = 10))
-
-
-
-print("filtering based on PVE explained by genes")
-sum_cat <- sum_cat[order(as.numeric(sum_cat$group_pve_gene),decreasing = T),]
-
-
-tissue_select <- sum_cat$weights[num_top:1]
-tissue_select <- tissue_select[tissue_select%in%rownames(lat)]
-
-##heatmap
-cor <- lat[tissue_select,tissue_select]
-cor <- fill_upper_triangle(cor)
-print(levelplot(cor,col.regions = clrs,xlab = "",ylab = "",
-                colorkey = TRUE))
-
-##cor matrix
-cor <- cor[rev(tissue_select),rev(tissue_select)]
-DT::datatable(cor,options = list(pageLength = 10))
 
 tissue_select_f1 <- sum_cat$weights[1:num_top]
 filtered_tissues <- filter_tissues(tissue_select_f1, cor)
@@ -367,8 +390,45 @@ filtered_tissues_cor <- sum_cat$group_pve_gene[sum_cat$weights %in% filtered_tis
 comb <- combine_vectors(tissue_select_f1, tissue_select_f1_cor, filtered_tissues, filtered_tissues_cor, pad_with_na = TRUE)
 colnames(comb) <- c("without_filtering","PVE_gene","filtered","PVE_gene")
 
-DT::datatable(comb,options = list(pageLength = 10))
+
+DT::datatable(comb,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Comparing the top tissue lists (with/without filtering by tissue correlation) '),options = list(pageLength = 10) )
+
 ```
+
+## Filtering based on PVE explained by genes 
+
+```{r}
+sum_cat <- sum_cat[order(as.numeric(sum_cat$group_pve_gene),decreasing = T),]
+
+tissue_select <- sum_cat$weights[num_top:1]
+tissue_select <- tissue_select[tissue_select%in%rownames(lat)]
+
+##heatmap
+cor <- lat[tissue_select,tissue_select]
+cor <- fill_upper_triangle(cor)
+print(levelplot(cor,col.regions = clrs,xlab = "",ylab = "",
+                colorkey = TRUE,main = "heatmap showing the tissue-tissue correlation"))
+
+##cor matrix
+cor <- cor[rev(tissue_select),rev(tissue_select)]
+DT::datatable(cor,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','tissue-tissue correlation matrix '),options = list(pageLength = 10) )
+
+
+tissue_select_f1 <- sum_cat$weights[1:num_top]
+filtered_tissues <- filter_tissues(tissue_select_f1, cor)
+
+tissue_select_f1_cor <- sum_cat$group_pve_gene[sum_cat$weights %in% tissue_select_f1 ]
+filtered_tissues_cor <- sum_cat$group_pve_gene[sum_cat$weights %in% filtered_tissues ]
+comb <- combine_vectors(tissue_select_f1, tissue_select_f1_cor, filtered_tissues, filtered_tissues_cor, pad_with_na = TRUE)
+colnames(comb) <- c("without_filtering","PVE_gene","filtered","PVE_gene")
+
+
+DT::datatable(comb,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Comparing the top tissue lists (with/without filtering by tissue correlation) '),options = list(pageLength = 10) )
+```
+
+
+
+
 
 
 # SCZ
@@ -376,9 +436,14 @@ DT::datatable(comb,options = list(pageLength = 10))
 ```{r }
 
 sum_cat <- sum_all[sum_all$traits =="SCZ-ieu-b-5102",]
-DT::datatable(sum_cat,options = list(pageLength = 5))
 
-print("filtering based on the number of high PIP genes")
+DT::datatable(sum_cat,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','summary for ctwas parameters and high pip genes (all tissues analysised)'),options = list(pageLength = 5) )
+```
+
+## Filtering based on the number of high PIP genes
+
+```{r }
+
 sum_cat <- sum_cat[order(as.numeric(sum_cat$num_gene_susiepip08),decreasing = T),]
 
 tissue_select <- sum_cat$weights[num_top:1]
@@ -388,39 +453,12 @@ tissue_select <- tissue_select[tissue_select%in%rownames(lat)]
 cor <- lat[tissue_select,tissue_select]
 cor <- fill_upper_triangle(cor)
 print(levelplot(cor,col.regions = clrs,xlab = "",ylab = "",
-                colorkey = TRUE))
+                colorkey = TRUE,main = "heatmap showing the tissue-tissue correlation"))
 
 ##cor matrix
 cor <- cor[rev(tissue_select),rev(tissue_select)]
-DT::datatable(cor,options = list(pageLength = 10))
+DT::datatable(cor,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','tissue-tissue correlation matrix '),options = list(pageLength = 10) )
 
-tissue_select_f1 <- sum_cat$weights[1:num_top]
-filtered_tissues <- filter_tissues(tissue_select_f1, cor)
-
-tissue_select_f1_cor <- sum_cat$num_gene_susiepip08[sum_cat$weights %in% tissue_select_f1 ]
-filtered_tissues_cor <- sum_cat$num_gene_susiepip08[sum_cat$weights %in% filtered_tissues ]
-comb <- combine_vectors(tissue_select_f1, tissue_select_f1_cor, filtered_tissues, filtered_tissues_cor, pad_with_na = TRUE)
-colnames(comb) <- c("without_filtering","#ofgene","filtered","#ofgene")
-DT::datatable(comb,options = list(pageLength = 10))
-
-
-
-print("filtering based on PVE explained by genes")
-sum_cat <- sum_cat[order(as.numeric(sum_cat$group_pve_gene),decreasing = T),]
-
-
-tissue_select <- sum_cat$weights[num_top:1]
-tissue_select <- tissue_select[tissue_select%in%rownames(lat)]
-
-##heatmap
-cor <- lat[tissue_select,tissue_select]
-cor <- fill_upper_triangle(cor)
-print(levelplot(cor,col.regions = clrs,xlab = "",ylab = "",
-                colorkey = TRUE))
-
-##cor matrix
-cor <- cor[rev(tissue_select),rev(tissue_select)]
-DT::datatable(cor,options = list(pageLength = 10))
 
 tissue_select_f1 <- sum_cat$weights[1:num_top]
 filtered_tissues <- filter_tissues(tissue_select_f1, cor)
@@ -430,17 +468,59 @@ filtered_tissues_cor <- sum_cat$group_pve_gene[sum_cat$weights %in% filtered_tis
 comb <- combine_vectors(tissue_select_f1, tissue_select_f1_cor, filtered_tissues, filtered_tissues_cor, pad_with_na = TRUE)
 colnames(comb) <- c("without_filtering","PVE_gene","filtered","PVE_gene")
 
-DT::datatable(comb,options = list(pageLength = 10))
+
+DT::datatable(comb,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Comparing the top tissue lists (with/without filtering by tissue correlation) '),options = list(pageLength = 10) )
+
 ```
+
+## Filtering based on PVE explained by genes 
+
+```{r}
+sum_cat <- sum_cat[order(as.numeric(sum_cat$group_pve_gene),decreasing = T),]
+
+tissue_select <- sum_cat$weights[num_top:1]
+tissue_select <- tissue_select[tissue_select%in%rownames(lat)]
+
+##heatmap
+cor <- lat[tissue_select,tissue_select]
+cor <- fill_upper_triangle(cor)
+print(levelplot(cor,col.regions = clrs,xlab = "",ylab = "",
+                colorkey = TRUE,main = "heatmap showing the tissue-tissue correlation"))
+
+##cor matrix
+cor <- cor[rev(tissue_select),rev(tissue_select)]
+DT::datatable(cor,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','tissue-tissue correlation matrix '),options = list(pageLength = 10) )
+
+
+tissue_select_f1 <- sum_cat$weights[1:num_top]
+filtered_tissues <- filter_tissues(tissue_select_f1, cor)
+
+tissue_select_f1_cor <- sum_cat$group_pve_gene[sum_cat$weights %in% tissue_select_f1 ]
+filtered_tissues_cor <- sum_cat$group_pve_gene[sum_cat$weights %in% filtered_tissues ]
+comb <- combine_vectors(tissue_select_f1, tissue_select_f1_cor, filtered_tissues, filtered_tissues_cor, pad_with_na = TRUE)
+colnames(comb) <- c("without_filtering","PVE_gene","filtered","PVE_gene")
+
+
+DT::datatable(comb,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Comparing the top tissue lists (with/without filtering by tissue correlation) '),options = list(pageLength = 10) )
+```
+
+
+
+
 
 # WBC
 
 ```{r }
 
 sum_cat <- sum_all[sum_all$traits =="WBC-ieu-b-30",]
-DT::datatable(sum_cat,options = list(pageLength = 5))
 
-print("filtering based on the number of high PIP genes")
+DT::datatable(sum_cat,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','summary for ctwas parameters and high pip genes (all tissues analysised)'),options = list(pageLength = 5) )
+```
+
+## Filtering based on the number of high PIP genes
+
+```{r }
+
 sum_cat <- sum_cat[order(as.numeric(sum_cat$num_gene_susiepip08),decreasing = T),]
 
 tissue_select <- sum_cat$weights[num_top:1]
@@ -450,39 +530,12 @@ tissue_select <- tissue_select[tissue_select%in%rownames(lat)]
 cor <- lat[tissue_select,tissue_select]
 cor <- fill_upper_triangle(cor)
 print(levelplot(cor,col.regions = clrs,xlab = "",ylab = "",
-                colorkey = TRUE))
+                colorkey = TRUE,main = "heatmap showing the tissue-tissue correlation"))
 
 ##cor matrix
 cor <- cor[rev(tissue_select),rev(tissue_select)]
-DT::datatable(cor,options = list(pageLength = 10))
+DT::datatable(cor,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','tissue-tissue correlation matrix '),options = list(pageLength = 10) )
 
-tissue_select_f1 <- sum_cat$weights[1:num_top]
-filtered_tissues <- filter_tissues(tissue_select_f1, cor)
-
-tissue_select_f1_cor <- sum_cat$num_gene_susiepip08[sum_cat$weights %in% tissue_select_f1 ]
-filtered_tissues_cor <- sum_cat$num_gene_susiepip08[sum_cat$weights %in% filtered_tissues ]
-comb <- combine_vectors(tissue_select_f1, tissue_select_f1_cor, filtered_tissues, filtered_tissues_cor, pad_with_na = TRUE)
-colnames(comb) <- c("without_filtering","#ofgene","filtered","#ofgene")
-DT::datatable(comb,options = list(pageLength = 10))
-
-
-
-print("filtering based on PVE explained by genes")
-sum_cat <- sum_cat[order(as.numeric(sum_cat$group_pve_gene),decreasing = T),]
-
-
-tissue_select <- sum_cat$weights[num_top:1]
-tissue_select <- tissue_select[tissue_select%in%rownames(lat)]
-
-##heatmap
-cor <- lat[tissue_select,tissue_select]
-cor <- fill_upper_triangle(cor)
-print(levelplot(cor,col.regions = clrs,xlab = "",ylab = "",
-                colorkey = TRUE))
-
-##cor matrix
-cor <- cor[rev(tissue_select),rev(tissue_select)]
-DT::datatable(cor,options = list(pageLength = 10))
 
 tissue_select_f1 <- sum_cat$weights[1:num_top]
 filtered_tissues <- filter_tissues(tissue_select_f1, cor)
@@ -492,9 +545,45 @@ filtered_tissues_cor <- sum_cat$group_pve_gene[sum_cat$weights %in% filtered_tis
 comb <- combine_vectors(tissue_select_f1, tissue_select_f1_cor, filtered_tissues, filtered_tissues_cor, pad_with_na = TRUE)
 colnames(comb) <- c("without_filtering","PVE_gene","filtered","PVE_gene")
 
-DT::datatable(comb,options = list(pageLength = 10))
+
+DT::datatable(comb,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Comparing the top tissue lists (with/without filtering by tissue correlation) '),options = list(pageLength = 10) )
 
 ```
+
+## Filtering based on PVE explained by genes 
+
+```{r}
+sum_cat <- sum_cat[order(as.numeric(sum_cat$group_pve_gene),decreasing = T),]
+
+tissue_select <- sum_cat$weights[num_top:1]
+tissue_select <- tissue_select[tissue_select%in%rownames(lat)]
+
+##heatmap
+cor <- lat[tissue_select,tissue_select]
+cor <- fill_upper_triangle(cor)
+print(levelplot(cor,col.regions = clrs,xlab = "",ylab = "",
+                colorkey = TRUE,main = "heatmap showing the tissue-tissue correlation"))
+
+##cor matrix
+cor <- cor[rev(tissue_select),rev(tissue_select)]
+DT::datatable(cor,caption = htmltools::tags$caption( style = 'caption-side: topleft; text-align = left; color:black;  font-size:150% ;','tissue-tissue correlation matrix '),options = list(pageLength = 10) )
+
+
+tissue_select_f1 <- sum_cat$weights[1:num_top]
+filtered_tissues <- filter_tissues(tissue_select_f1, cor)
+
+tissue_select_f1_cor <- sum_cat$group_pve_gene[sum_cat$weights %in% tissue_select_f1 ]
+filtered_tissues_cor <- sum_cat$group_pve_gene[sum_cat$weights %in% filtered_tissues ]
+comb <- combine_vectors(tissue_select_f1, tissue_select_f1_cor, filtered_tissues, filtered_tissues_cor, pad_with_na = TRUE)
+colnames(comb) <- c("without_filtering","PVE_gene","filtered","PVE_gene")
+
+
+DT::datatable(comb,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Comparing the top tissue lists (with/without filtering by tissue correlation) '),options = list(pageLength = 10) )
+```
+
+
+
+
 
 
 <!-- # asthma - -ukb-d-J10_ASTHMA  -->
