--- a/analysis/matching_tissue.Rmd
+++ b/analysis/matching_tissue.Rmd
@@ -151,10 +151,10 @@ DT::datatable(cor,caption = htmltools::tags$caption( style = 'caption-side: topl
 tissue_select_f1 <- sum_cat$weights[1:num_top]
 filtered_tissues <- filter_tissues(tissue_select_f1, cor)
 
-tissue_select_f1_cor <- sum_cat$group_pve_gene[sum_cat$weights %in% tissue_select_f1 ]
-filtered_tissues_cor <- sum_cat$group_pve_gene[sum_cat$weights %in% filtered_tissues ]
+tissue_select_f1_cor <- sum_cat$num_gene_susiepip08[sum_cat$weights %in% tissue_select_f1 ]
+filtered_tissues_cor <- sum_cat$num_gene_susiepip08[sum_cat$weights %in% filtered_tissues ]
 comb <- combine_vectors(tissue_select_f1, tissue_select_f1_cor, filtered_tissues, filtered_tissues_cor, pad_with_na = TRUE)
-colnames(comb) <- c("without_filtering","PVE_gene","filtered","PVE_gene")
+colnames(comb) <- c("without_filtering","#highpip_gene","filtered","#highpip_gene")
 
 
 DT::datatable(comb,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Comparing the top tissue lists (with/without filtering by tissue correlation) '),options = list(pageLength = 10) )
@@ -230,11 +230,10 @@ DT::datatable(cor,caption = htmltools::tags$caption( style = 'caption-side: topl
 tissue_select_f1 <- sum_cat$weights[1:num_top]
 filtered_tissues <- filter_tissues(tissue_select_f1, cor)
 
-tissue_select_f1_cor <- sum_cat$group_pve_gene[sum_cat$weights %in% tissue_select_f1 ]
-filtered_tissues_cor <- sum_cat$group_pve_gene[sum_cat$weights %in% filtered_tissues ]
+tissue_select_f1_cor <- sum_cat$num_gene_susiepip08[sum_cat$weights %in% tissue_select_f1 ]
+filtered_tissues_cor <- sum_cat$num_gene_susiepip08[sum_cat$weights %in% filtered_tissues ]
 comb <- combine_vectors(tissue_select_f1, tissue_select_f1_cor, filtered_tissues, filtered_tissues_cor, pad_with_na = TRUE)
-colnames(comb) <- c("without_filtering","PVE_gene","filtered","PVE_gene")
-
+colnames(comb) <- c("without_filtering","#highpip_gene","filtered","#highpip_gene")
 
 DT::datatable(comb,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Comparing the top tissue lists (with/without filtering by tissue correlation) '),options = list(pageLength = 10) )
 
@@ -306,12 +305,10 @@ DT::datatable(cor,caption = htmltools::tags$caption( style = 'caption-side: topl
 
 tissue_select_f1 <- sum_cat$weights[1:num_top]
 filtered_tissues <- filter_tissues(tissue_select_f1, cor)
-
-tissue_select_f1_cor <- sum_cat$group_pve_gene[sum_cat$weights %in% tissue_select_f1 ]
-filtered_tissues_cor <- sum_cat$group_pve_gene[sum_cat$weights %in% filtered_tissues ]
+tissue_select_f1_cor <- sum_cat$num_gene_susiepip08[sum_cat$weights %in% tissue_select_f1 ]
+filtered_tissues_cor <- sum_cat$num_gene_susiepip08[sum_cat$weights %in% filtered_tissues ]
 comb <- combine_vectors(tissue_select_f1, tissue_select_f1_cor, filtered_tissues, filtered_tissues_cor, pad_with_na = TRUE)
-colnames(comb) <- c("without_filtering","PVE_gene","filtered","PVE_gene")
-
+colnames(comb) <- c("without_filtering","#highpip_gene","filtered","#highpip_gene")
 
 DT::datatable(comb,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Comparing the top tissue lists (with/without filtering by tissue correlation) '),options = list(pageLength = 10) )
 
@@ -385,11 +382,10 @@ DT::datatable(cor,caption = htmltools::tags$caption( style = 'caption-side: topl
 tissue_select_f1 <- sum_cat$weights[1:num_top]
 filtered_tissues <- filter_tissues(tissue_select_f1, cor)
 
-tissue_select_f1_cor <- sum_cat$group_pve_gene[sum_cat$weights %in% tissue_select_f1 ]
-filtered_tissues_cor <- sum_cat$group_pve_gene[sum_cat$weights %in% filtered_tissues ]
+tissue_select_f1_cor <- sum_cat$num_gene_susiepip08[sum_cat$weights %in% tissue_select_f1 ]
+filtered_tissues_cor <- sum_cat$num_gene_susiepip08[sum_cat$weights %in% filtered_tissues ]
 comb <- combine_vectors(tissue_select_f1, tissue_select_f1_cor, filtered_tissues, filtered_tissues_cor, pad_with_na = TRUE)
-colnames(comb) <- c("without_filtering","PVE_gene","filtered","PVE_gene")
-
+colnames(comb) <- c("without_filtering","#highpip_gene","filtered","#highpip_gene")
 
 DT::datatable(comb,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Comparing the top tissue lists (with/without filtering by tissue correlation) '),options = list(pageLength = 10) )
 
@@ -463,11 +459,10 @@ DT::datatable(cor,caption = htmltools::tags$caption( style = 'caption-side: topl
 tissue_select_f1 <- sum_cat$weights[1:num_top]
 filtered_tissues <- filter_tissues(tissue_select_f1, cor)
 
-tissue_select_f1_cor <- sum_cat$group_pve_gene[sum_cat$weights %in% tissue_select_f1 ]
-filtered_tissues_cor <- sum_cat$group_pve_gene[sum_cat$weights %in% filtered_tissues ]
+tissue_select_f1_cor <- sum_cat$num_gene_susiepip08[sum_cat$weights %in% tissue_select_f1 ]
+filtered_tissues_cor <- sum_cat$num_gene_susiepip08[sum_cat$weights %in% filtered_tissues ]
 comb <- combine_vectors(tissue_select_f1, tissue_select_f1_cor, filtered_tissues, filtered_tissues_cor, pad_with_na = TRUE)
-colnames(comb) <- c("without_filtering","PVE_gene","filtered","PVE_gene")
-
+colnames(comb) <- c("without_filtering","#highpip_gene","filtered","#highpip_gene")
 
 DT::datatable(comb,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Comparing the top tissue lists (with/without filtering by tissue correlation) '),options = list(pageLength = 10) )
 
@@ -540,11 +535,10 @@ DT::datatable(cor,caption = htmltools::tags$caption( style = 'caption-side: topl
 tissue_select_f1 <- sum_cat$weights[1:num_top]
 filtered_tissues <- filter_tissues(tissue_select_f1, cor)
 
-tissue_select_f1_cor <- sum_cat$group_pve_gene[sum_cat$weights %in% tissue_select_f1 ]
-filtered_tissues_cor <- sum_cat$group_pve_gene[sum_cat$weights %in% filtered_tissues ]
+tissue_select_f1_cor <- sum_cat$num_gene_susiepip08[sum_cat$weights %in% tissue_select_f1 ]
+filtered_tissues_cor <- sum_cat$num_gene_susiepip08[sum_cat$weights %in% filtered_tissues ]
 comb <- combine_vectors(tissue_select_f1, tissue_select_f1_cor, filtered_tissues, filtered_tissues_cor, pad_with_na = TRUE)
-colnames(comb) <- c("without_filtering","PVE_gene","filtered","PVE_gene")
-
+colnames(comb) <- c("without_filtering","#highpip_gene","filtered","#highpip_gene")
 
 DT::datatable(comb,caption = htmltools::tags$caption( style = 'caption-side: left; text-align: left; color:black;  font-size:150% ;','Comparing the top tissue lists (with/without filtering by tissue correlation) '),options = list(pageLength = 10) )
 
