--- a/analysis/matching_tissue.Rmd
+++ b/analysis/matching_tissue.Rmd
@@ -576,6 +576,42 @@ DT::datatable(comb,caption = htmltools::tags$caption( style = 'caption-side: lef
 ```
 
 
+# Selected Tissues 
+
+| Trait | Number of Tissues | Tissue                               | # of high pip genes | PVE (if same in number of high pip genes) |
+|-------|-------------------|--------------------------------------|---------------------|-------------------------------------------|
+| aFib  | 5                 | Heart_Atrial_Appendage               | 37                  |                                           |
+|       |                   | Esophagus_Muscularis                 | 17                  |                                           |
+|       |                   | Brain_Cerebellum                     | 12                  |                                           |
+|       |                   | Muscle_Skeletal                      | 12                  |                                           |
+|       |                   | Thyroid                              | 12                  |                                           |
+| IBD   | 5                 | Whole_Blood                          | 18                  |                                           |
+|       |                   | Cells_Cultured_fibroblasts           | 15                  |                                           |
+|       |                   | Adipose_Subcutaneous                 | 12                  |                                           |
+|       |                   | Colon_Transverse                     | 10                  |                                           |
+|       |                   | Esophagus_Mucosa                     | 10                  |                                           |
+| LDL   | 5                 | Liver                                | 40                  |                                           |
+|       |                   | Lung                                 | 32                  |                                           |
+|       |                   | Spleen                               | 32                  |                                           |
+|       |                   | Colon_Transverse                     | 31                  |                                           |
+|       |                   | Skin_Not_Sun_Exposed_Suprapubic      | 29                  |                                           |
+| SBP   | 6                 | Artery_Tibial                        | 29                  |                                           |
+|       |                   | Spleen                               | 22                  |                                           |
+|       |                   | Skin_Sun_Exposed_Lower_leg           | 19                  |                                           |
+|       |                   | Adipose_Subcutaneous                 | 17                  |                                           |
+|       |                   | Brain_Cortex                         | 16                  | 0.00611                                   |
+|       |                   | Heart_Atrial_Appendage               | 16                  | 0.0057                                    |
+| SCZ   | 6                 | Adrenal_Gland                        | 18                  |                                           |
+|       |                   | Brain_Cerebellar_Hemisphere          | 17                  |                                           |
+|       |                   | Brain_Anterior_cingulate_cortex_BA24 | 16                  |                                           |
+|       |                   | Heart_Left_Ventricle                 | 14                  | 0.01494                                   |
+|       |                   | Lung                                 | 14                  | 0.01856                                   |
+|       |                   | Nerve_Tibial                         | 14                  | 0.01423                                   |
+| WBC   | 5                 | Whole_Blood                          | 101                 |                                           |
+|       |                   | Adipose_Subcutaneous                 | 63                  |                                           |
+|       |                   | Esophagus_Muscularis                 | 53                  |                                           |
+|       |                   | Colon_Transverse                     | 52                  |                                           |
+|       |                   | Spleen                               | 46                  |                                           |
 
 
 
