update apa results

--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -19,3 +19,6 @@ editor_options:
 # Multi-tissue 
 
 [link](https://sq-96.github.io/multigroup_ctwas_analysis/multi_tissue.html)
+
+# Single QTL analysis
+APA QTL analysis [link](https://sq-96.github.io/multigroup_ctwas_analysis/apa_weights_analysis.html)
