update histone weights

--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -22,3 +22,5 @@ editor_options:
 
 # Single QTL analysis
 APA QTL analysis [link](https://sq-96.github.io/multigroup_ctwas_analysis/apa_weights_analysis.html)
+
+histone QTL analysis [link](https://sq-96.github.io/multigroup_ctwas_analysis/histone_weights_analysis.html)
