--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -10,17 +10,18 @@ editor_options:
 
 # Data
 
-[link](https://sq-96.github.io/multigroup_ctwas_analysis/data.html)
+  [link](https://sq-96.github.io/multigroup_ctwas_analysis/data.html)
 
 # LD mismatch diagnosis
 
-[LD mismatch diagnosis using `susie_rss`](detect_LD_mismatch_gwas_UKBBref_susie_rss.html)
+  * [LD mismatch diagnosis using `SuSiE_RSS`](detect_LD_mismatch_gwas_UKBBref_susie_rss.html)
+  * [Detect LD mismatch for LDL and aFib using `DENTIST` vs.`SuSiE_RSS`](detect_LD_mismatch_gwas_UKBBref_DENTIST_susie_rss.html)
 
 # Multi-tissue 
 
-[link](https://sq-96.github.io/multigroup_ctwas_analysis/multi_tissue.html)
+  [link](https://sq-96.github.io/multigroup_ctwas_analysis/multi_tissue.html)
 
 # Single QTL analysis
-APA QTL analysis [link](https://sq-96.github.io/multigroup_ctwas_analysis/apa_weights_analysis.html)
 
-histone QTL analysis [link](https://sq-96.github.io/multigroup_ctwas_analysis/histone_weights_analysis.html)
+  * APA QTL analysis [link](https://sq-96.github.io/multigroup_ctwas_analysis/apa_weights_analysis.html)
+  * histone QTL analysis [link](https://sq-96.github.io/multigroup_ctwas_analysis/histone_weights_analysis.html)
