--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -20,6 +20,8 @@ editor_options:
 
 [link](https://sq-96.github.io/multigroup_ctwas_analysis/multi_tissue.html)
 
+LDL ten tissues analysis [link](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_ten_tissues.html)
+
 # Single QTL analysis
 APA QTL analysis [link](https://sq-96.github.io/multigroup_ctwas_analysis/apa_weights_analysis.html)
 
