--- a/analysis/LDL_ten_tissues.Rmd
+++ b/analysis/LDL_ten_tissues.Rmd
@@ -27,7 +27,7 @@ ctwas_parameters$enrichment
 ctwas_parameters$group_pve
 ```
 
-```{r}
+```{r,out.width="50%"}
 ctwas_parameters$convergence_plot
 ```
 
