--- a/analysis/multi_tissue.Rmd
+++ b/analysis/multi_tissue.Rmd
@@ -9,3 +9,5 @@ editor_options:
 
 
 [Deciding the matching tissue](https://sq-96.github.io/multigroup_ctwas_analysis/matching_tissue.html)
+
+[Multi-tissue analysis, merging the LD blocks](https://sq-96.github.io/multigroup_ctwas_analysis/multi_tissue_ldmerge.html)
