--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -19,18 +19,16 @@ editor_options:
 
 # Multi-tissue 
 
-  [link](https://sq-96.github.io/multigroup_ctwas_analysis/multi_tissue.html)
+  * [Deciding the matching tissue](https://sq-96.github.io/multigroup_ctwas_analysis/matching_tissue.html)
+  * [Multi-tissue analysis, merging the LD blocks](https://sq-96.github.io/multigroup_ctwas_analysis/multi_tissue_ldmerge.html)
 
 LDL ten tissues analysis [link](https://sq-96.github.io/multigroup_ctwas_analysis/LDL_ten_tissues.html)
 
 # Single QTL analysis
 
-<<<<<<< HEAD
-histone QTL analysis [link](https://sq-96.github.io/multigroup_ctwas_analysis/histone_weights_analysis.html)
-=======
   * APA QTL analysis [link](https://sq-96.github.io/multigroup_ctwas_analysis/apa_weights_analysis.html)
   * histone QTL analysis [link](https://sq-96.github.io/multigroup_ctwas_analysis/histone_weights_analysis.html)
->>>>>>> e0f339f3cba9c8b36e452a7c3f004ed877977a62
+
 
 # Simulation results
 
