--- a/analysis/data.Rmd
+++ b/analysis/data.Rmd
@@ -38,3 +38,29 @@ hg37 /project2/mstephens/wcrouse/UKB_LDR_0.1_b37/
 
 download: https://uchicago.box.com/s/jqocacd2fulskmhoqnasrknbt59x3xkn
 
+# Manhattan plots for the GWAS data
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/output/aFib-ebi-a-GCST006414.jpg" width="150%">
+</figure>
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/output/IBD-ebi-a-GCST004131.jpg" width="150%">
+</figure>
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/output/LDL-ukb-d-30780_irnt.jpg" width="150%">
+</figure>
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/output/SBP-ukb-a-360.jpg" width="150%">
+</figure>
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/output/SCZ-ieu-b-510.jpg" width="150%">
+</figure>
+
+<figure class="half">
+    <img src="https://github.com/sq-96/multigroup_ctwas_analysis/raw/master/output/WBC-ieu-b-30.jpg" width="150%">
+</figure>
+
